--- a/src/main/resources/assets/betternethermap/lang/en_us.json
+++ b/src/main/resources/assets/betternethermap/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "betternethermap.failmessage": "This map type is disabled.",
+  "betternethermap.failmessage": "This map type must be enabled in config.",
   "item.betternethermap.fixedmap": "Fixed-Height Map",
   "item.betternethermap.snapmap": "Snap-Height Map",
   "item.betternethermap.variablemap": "Variable-Height Map"
